replace usages of deprecated Boolean & Double constructor with *.valueOf